--- a/doc/设计模式/设计模式.md
+++ b/doc/设计模式/设计模式.md
@@ -78,9 +78,38 @@
 
 #### 单例模式
 
+1. 单例模式特点
 
+   1. 单例类中只有一个实例对象
+   2. 该实例对象只能由该单例类创建
+   3. 单例类对外提供一个访问该单例的全局访问点
+
+2. 优点
+
+   1. 单例模式可以保证内存里只有一个实例，减少了内存的开销
+   2. 可以避免对资源的多重占用
+   3. 单例模式设置全局访问点，可以优化和共享资源的访问
+
+3. 引用场景
+
+   1. 需要频繁创建的一些类，使用单例可以降低系统的内存压力，减少 GC
+   2. 某类只要求生成一个对象的时候，如一个班中的班长、每个人的身份证号等
+   3. 某类需要频繁实例化，而创建的对象又频繁被销毁的时候，如多线程的线程池、网络连接池等
+   4. 当对象需要被共享的场合
+
+4. 懒汉式和饿汉式
+
+   1. 懒汉式
+
+      什么时候调用getInstance方法，什么时候就创建该实例，懒汉式是非线程安全的，因此在设计的时候应该保证线程安全性
+
+   2. 饿汉式
+
+      类一加载就创建该单例，保证了在调用getInstance方法之前该单例就已经创建好了。因此饿汉式是线程安全的
 
 #### 原型模式
+
+
 
 #### 工厂方法模式
 
