--- a/doc/设计模式/设计模式.md
+++ b/doc/设计模式/设计模式.md
@@ -109,9 +109,33 @@
 
 #### 原型模式
 
+1. 概念：
 
+   用一个已经创建的实例作为原型，通过复制该原型对象来创建一个和原型相同或相似的新对象
+
+   *原型对象需要实现Cloneable接口，否则会抛出异常*
+
+2. 优点
+
+   [Java](http://c.biancheng.net/java/) 自带的原型模式基于内存二进制流的复制，在性能上比直接 new 一个对象更加优良
+
+   可以使用深克隆方式保存对象的状态
+
+3. 分类
+
+   1. 浅克隆
+
+   2. 深克隆
+
+      在Java中如果需要实现对象的深拷贝，可以通过序列化再反序列化的方式实现（将一个对象保存到流中，然后再从流中读取出来）。
+
+      序列化实现深拷贝的原理：通过序列化实现的拷贝不仅可以复制对象本身，还可以复制原型对象的引用类型的成员变量
+
+      *序列化对象需要实现Serializable接口*
 
 #### 工厂方法模式
+
+
 
 #### 抽象工厂模式
 
