简单工厂模式

--- a/doc/设计模式/设计模式.md
+++ b/doc/设计模式/设计模式.md
@@ -133,6 +133,18 @@
 
       *序列化对象需要实现Serializable接口*
 
+#### 简单工厂模式
+
+1. 应用场景
+
+   对于产品种类较少的情况，可以考虑使用简单工厂模式实现创建产品。客户端只需要给工厂传入想要创建产品类型的参数然后使用产品就可以了，不需要知道创建产品的细节（具体实例的创建细节）。
+
+   简单工厂模式实现客户端与具体产品之间的解耦
+
+2. 类结构
+
+   <img src="https://i.loli.net/2020/09/26/U2ZudyvMohgsi5c.png" alt="image-20200926112641449" style="zoom:80%;" />
+
 #### 工厂方法模式
 
 
