工厂方法模式

--- a/doc/设计模式/设计模式.md
+++ b/doc/设计模式/设计模式.md
@@ -141,15 +141,35 @@
 
    简单工厂模式实现客户端与具体产品之间的解耦
 
-2. 类结构
+2. 系统结构
 
    <img src="https://i.loli.net/2020/09/26/U2ZudyvMohgsi5c.png" alt="image-20200926112641449" style="zoom:80%;" />
 
 #### 工厂方法模式
 
+1. 产生背景
 
+   简单工厂模式违反了开闭原则，而工厂方法模式是对简单工厂模式的进一步抽象化，其好处是在不修改系统代码的情况下可以引进新的产品，即满足了开闭原则
+
+2. 优点
+
+   1. 用户只需要工厂的名字就可以得到对应的产品，无需知道产品的生产细节
+   2. 灵活性增强，如果需要增加新的产品，只需添加产品类和对应的工厂类即可
+   3. 解耦框架，高层模块只需要知道产品的抽象类即可，无序知道产品的实现类细节
+
+3. 缺点
+
+   1. 类的个数容易过多，增加了复杂度
+   2. 增加了系统的抽象性和理解难度
+   3. 抽象工厂只能产生出一种产品，此弊端可以用`抽象工厂模式`解决
+
+4. 系统结构
+
+   <img src="https://i.loli.net/2020/09/26/5aLIUwjC3KhDYEl.png" alt="image-20200926142752932" style="zoom:80%;" />
 
 #### 抽象工厂模式
+
+
 
 #### 建造者模式
 
