设计模式 - 抽象工厂模式

--- a/doc/设计模式/设计模式.md
+++ b/doc/设计模式/设计模式.md
@@ -169,7 +169,13 @@
 
 #### 抽象工厂模式
 
+1. 概念
 
+   抽象工厂模式是工厂方法模式的升级版本，工厂方法模式只生产一个等级的产品，而抽象工厂模式可生产多个等级的产品
+
+2. 产品等级与产品组关系
+
+   <img src="https://i.loli.net/2020/09/26/gy8WQZECAY67UIj.png" alt="image-20200926153933246" style="zoom:67%;" />
 
 #### 建造者模式
 
