--- a/doc/设计模式/设计模式.md
+++ b/doc/设计模式/设计模式.md
@@ -181,4 +181,69 @@
 
 ### 三.结构型模式
 
+#### 结构型模式概述
+
+##### 概述
+
+结构型模式描述了将类或者对象按照某种布局设计成更大的结构。它分为类结构模式和对象结构模式，类结构模式采用继承或者实现关系组织接口或者类，对象结构模式采用组合或者聚合关系来组织对象。
+
+由于组合/聚合关系比继承关系的耦合度更低，满足`合成复用法则`，因此对象结构模式比类结构模式更加灵活
+
+##### 7种结构型模式
+
+1. 代理模式 `proxy`
+
+   为某对象提供一个代理从而控制对该对象的直接访问。即客户端通过代理间接访问访问该对象，从而限制/增强/修改 该对象的一些属性
+
+2. 适配器模式 `Adapter`
+
+3. 桥接模式 `Bridge`
+
+4. 装饰模式 `Decorator`
+
+5. 外观模式 `Facade`
+
+6. 享元模式 `Flyweight`
+
+7. 组合模式 `Composite`
+
+代理模式
+
+适配器模式
+
+桥接模式
+
+装饰模式
+
+外观模式
+
+享元模式
+
+组合模式
+
 ### 四.行为型模式
+
+行为型模式概述
+
+模板方法模式
+
+策略模式
+
+命令模式
+
+责任链模式
+
+状态模式
+
+观察者模式
+
+中介者模式
+
+迭代器模式
+
+访问者模式
+
+备忘录模式
+
+解释器模式
+
