--- a/doc/设计模式/设计模式.md
+++ b/doc/设计模式/设计模式.md
@@ -207,7 +207,23 @@
 
 7. 组合模式 `Composite`
 
-代理模式
+#### 代理模式
+
+##### 概念
+
+由于某些原因需要给某对象提供一个代理以控制对该对象的访问
+
+##### 优点
+
+1. 代理模式在客户端与目标对象之间起到一个中介作用和保护目标对象的作用
+2. 代理对象可以扩展目标对象的功能
+3. 代理模式能将客户端与目标对象分离，在一定程度上降低了系统的耦合度，增加了程序的可扩展性
+
+##### 模式结构
+
+1. 抽象主题（Subject）类：通过接口或抽象类声明真实主题和代理对象实现的业务方法
+2. 真实主题（Real Subject）类
+3. 代理（Proxy）类
 
 适配器模式
 
