设计模式 - 适配器模式

--- a/doc/设计模式/设计模式.md
+++ b/doc/设计模式/设计模式.md
@@ -225,7 +225,18 @@
 2. 真实主题（Real Subject）类
 3. 代理（Proxy）类
 
-适配器模式
+#### 适配器模式
+
+##### 概念
+
+将一个类的接口转换成客户希望的另外一个接口，使得原本由于接口不兼容而不能一起工作的那些类能一起工作。
+
+##### 分类
+
+1. 类结构模式（通过继承关系实现，耦合度较高）
+2. 对象结构模式（通过组合/聚合关系实现，耦合度较低）
+
+
 
 桥接模式
 
