JVM - 分代收集理论、垃圾收集算法

--- a/doc/Java虚拟机/第3章.垃圾收集器与内存分配策略.md
+++ b/doc/Java虚拟机/第3章.垃圾收集器与内存分配策略.md
@@ -8,5 +8,81 @@
 
 ##### 1.1引用计数算法
 
+1. 算法思路
+2. 算法漏洞
+3. 漏洞演示
+4. IDEA设置参数查看GC日志
+
 ##### 1.2可达性分析算法
+
+1. 算法思路
+2. GC Roots集合对象
+
+#### 2.再谈引用
+
+##### 2.1强引用
+
+##### 2.2软引用
+
+##### 2.3弱引用
+
+##### 2.4虚引用
+
+#### 3.垃圾收集算法
+
+从判断对象消亡的角度划分，垃圾收集算法分为：引用式垃圾收集算法（`直接式垃圾收集算法`）、追踪式垃圾收集算法（`间接式垃圾收集算法`）
+
+`直接式垃圾收集算法`在主流的Java虚拟机中均未设计，下文讲的垃圾收集算法都是基于`间接式垃圾收集算法`讲的
+
+##### 3.1分代收集理论
+
+分带收集理论是建立在两个假说之上的
+
+1. 弱分代假说
+
+   绝大多数对象都是朝生夕灭的
+
+2. 强分代假说
+
+   熬过越多次数的垃圾回收过程的对象就越难以消亡
+
+**分代收集理论堆内存模型：**
+
+![image-20201002111916919](https://i.loli.net/2020/10/02/rRBmLOxibso6t2p.png)
+
+根据分代收集理论，在新生代中每次垃圾回收都会有大量的对象消亡，少数存活下来的对象经过年龄的增长（熬过垃圾回收过程的次数）会逐步转移至老年代。
+
+**跨代引用：**
+
+​	*但是对象不是孤立的，对象之间会存在跨代引用的现象*。如果现在只进行一次Minor GC，考虑到新生代的对象是完全有可能被老年代中的对象引用的，为了找出该老年代中的对象，不得不在GC Roots集合之外还有对老年代的对象进行一次整个遍历，进而保证可达性分析的正确性。这种方式理论上是可行的，但是在实际操作中会造成额外的性能负担。
+
+​	为了解决跨代引用的问题，在分代收集理论的基础上又提出了第三条经验法则：跨代引用假说，即跨代引用相对于同代引用来说仅占极少数。
+
+> 存在相互引用的两个对象是应该更加倾向于同时存活或者同时消亡的。如果新生代的对象存在跨代引用，由于老年代难以消亡，随着GC过程的增加 新生代的对象也会变得难以消亡，该新生代的对象就会转移至老年代中，因此这种跨带引用也会随之消失。
+
+##### 3.2标记 - 清除算法
+
+**3.2.1算法思路**
+
+算法分为标记过程和清除过程，首先对需要清除的对象进行标记，标记过程完成之后对所有被标记过的对象进行清除操作。标记过程就是判定对象是否属于垃圾的过程。
+
+**3.2.2算法缺点**
+
+1. 效率不稳定
+
+   该算法的执行效率会随着堆内存中需要回收对象的个数的增加而降低，
+
+2. 会产生过多的内存空间碎片
+
+   该算法执行过后会产生大量的不连续的内存碎片，如果一个大的对象需要分配内存而找不到一个完整的内存空间，则不得不提前出发第二次GC
+
+##### 3.3标记 - 复制算法
+
+**3.3.1算法思路**
+
+##### 3.4标记 - 整理算法
+
+**3.4.1算法思路**
+
+
 
