JVM 标记-复制算法、标记-整理算法

--- a/doc/Java虚拟机/第3章.垃圾收集器与内存分配策略.md
+++ b/doc/Java虚拟机/第3章.垃圾收集器与内存分配策略.md
@@ -80,9 +80,33 @@
 
 **3.3.1算法思路**
 
-##### 3.4标记 - 整理算法
+将可用的内存按照容量划分为大小相等的两块，每次只使用其中的一块，当一块的内存用完了时，将仍然存活的对象复制到另一块内存区域上，再把已经使用过的内存区域一次性清理掉
+
+**3.3.2算法缺点**
+
+1. 如果内存中有大量的存活的对象，此算法会造成内存间复制的开销
+2. 此算法将可用内存缩小了原来的一半，造成了内存空间的浪费
+
+**3.3.3 Appel式回收（标记 - 复制算法的优化）**
+
+由于新生代中98%的对象都熬不过第一轮垃圾回收，因此不需要将新生代的内存空间按照1：1比例划分
+
+**Appel式新生代内存分配模型：**
+
+![image-20201002131514203](https://i.loli.net/2020/10/02/axDPfm9yngkSYd2.png)
+
+Appel式回收将新生代划分为Eden区（内存占比80%）和两个Survivor区（内存占比10%）,每次分配内存时只使用Eden区和其中一个Survivor区，这里称之为Survivor1区。在进行垃圾回收时将两个区回收后仍然存活的对象全部复制到Servivor2区，这时需要考虑如果`Minor GC`后的对象占用的内存任然超过Servivor2区的内存的话，则将这些对象通过  `分配担保机制` 复制到老年代。
+
+##### 3.4标记 - 整理算法   
 
 **3.4.1算法思路**
+
+标记 - 整理算法的标记过程和标记 - 清除算法的标记过程一致，但是后续不是直接对可回收对象进行清理，而是让所有存活的对象都向内存空间一段移动，超过内存空间边界的内存则被清理掉
+
+**3.4.2算法缺点**
+
+1. 如果存活的对象数量比较多（尤其是在老年代中），每次移动都要全部更新引用这些对象的内存地址，这将是一件很大内存操作
+2. 每次移动对象都需要全部暂停用户应用程序才能进行，显然不合理。移动对象则内存回收比较复杂，不移动对象则内存分配时比较复杂（会产生较多的内存碎片）
 
 
 
