JVM - 内存分配与回收策略实战

--- a/doc/Java虚拟机/第3章.垃圾收集器与内存分配策略.md
+++ b/doc/Java虚拟机/第3章.垃圾收集器与内存分配策略.md
@@ -108,5 +108,17 @@ Appel式回收将新生代划分为Eden区（内存占比80%）和两个Survivor
 1. 如果存活的对象数量比较多（尤其是在老年代中），每次移动都要全部更新引用这些对象的内存地址，这将是一件很大内存操作
 2. 每次移动对象都需要全部暂停用户应用程序才能进行，显然不合理。移动对象则内存回收比较复杂，不移动对象则内存分配时比较复杂（会产生较多的内存碎片）
 
+#### 4.实战：内存分配与回收策略
+
+4.1对象优先在Eden区分配
+
+4.2大对象直接进入老年代
+
+4.3长期存活的对象进入老年代
+
+4.4动态判断对象年龄
+
+4.5空间分配担保
+
 
 
