JVM - 内存分配与回收策略实战

--- a/doc/Java虚拟机/第3章.垃圾收集器与内存分配策略.md
+++ b/doc/Java虚拟机/第3章.垃圾收集器与内存分配策略.md
@@ -110,15 +110,109 @@ Appel式回收将新生代划分为Eden区（内存占比80%）和两个Survivor
 
 #### 4.实战：内存分配与回收策略
 
-4.1对象优先在Eden区分配
+**查看当前虚拟机类型以及垃圾收集器类型：**
 
-4.2大对象直接进入老年代
+<img src="https://i.loli.net/2020/10/03/XAonGCKgub8pwOR.png" alt="image-20201003105132967" style="zoom:90%;" />
 
-4.3长期存活的对象进入老年代
+从上图可以看出当前虚拟机用的是`HotSpot虚拟机`，在新生代中使用的是`Parallel Scavenge`收集器，在老年代中使用的是`Serial Old`收集器
 
-4.4动态判断对象年龄
+##### 4.1对象优先在Eden区分配
 
-4.5空间分配担保
+代码示例：
+
+```java
+package com.hacker.jvm;
+
+/**
+ * @Author: geek
+ * @Date: 2020/10/3 10:16
+ * @Description: 对象优先在Eden区分配内存
+ * VM参数：-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
+ * 参数说明
+ *  -Xms20M：最大堆内存20M
+ *  -Xmx20M：最小堆内存20M，两者内存设置一致的原因是避免堆内存自动扩展
+ *  -Xmn10M：新生代分配10M内存，老年代分配10M内存
+ *  -XX:+PrintGCDetails 输出GC日志
+ *  -XX:SurvivorRatio=8 Eden区域Survivor区的内存占比为8:1
+ */
+public class Demo01 {
+    private static final int _1MB = 1024 * 1024;
+
+    public static void main(String[] args) {
+        byte[] allocation1,allocation2,allocation3,allocation4;
+        // allocation1分配2M内存空间
+        allocation1 = new byte[2 * _1MB];
+        allocation2 = new byte[2 * _1MB];
+        allocation3 = new byte[2 * _1MB];
+        // 发生一次Minor GC
+        allocation4 = new byte[4 * _1MB];
+    }
+}
+```
+
+GC日志：
+
+```verilog
+[GC (Allocation Failure) [PSYoungGen: 6787K->815K(9216K)] 6787K->4919K(19456K), 0.0061602 secs] [Times: user=0.00 sys=0.00, real=0.01 secs] 
+Heap
+ PSYoungGen      total 9216K, used 7363K [0x00000000ff600000, 0x0000000100000000, 0x0000000100000000)
+  eden space 8192K, 79% used [0x00000000ff600000,0x00000000ffc64fe0,0x00000000ffe00000)
+  from space 1024K, 79% used [0x00000000ffe00000,0x00000000ffecbca0,0x00000000fff00000)
+  to   space 1024K, 0% used [0x00000000fff00000,0x00000000fff00000,0x0000000100000000)
+ ParOldGen       total 10240K, used 4104K [0x00000000fec00000, 0x00000000ff600000, 0x00000000ff600000)
+  object space 10240K, 40% used [0x00000000fec00000,0x00000000ff002020,0x00000000ff600000)
+ Metaspace       used 3339K, capacity 4556K, committed 4864K, reserved 1056768K
+  class space    used 361K, capacity 392K, committed 512K, reserved 1048576K
+```
+
+##### 4.2大对象直接进入老年代
+
+大对象指的是需要占用大量连续内存空间的Java对象，例如一个很长的字符串对象、一个数据量很大的数组。我们写程序的时候应该尽量避免大对象的声明，因为它会导致明明还有剩余的内存空间，但是还是提前触发GC，以获得足够的内存空间来安置它们。
+
+HotSpot虚拟机提供了 `-XX:+PretenureSizeThreshold` 参数来指定超过该内存大小的对象直接进入老年代，这样就避免了大对象在Eden和 Survivor去的来回复制，减少了对象复制的内存开销
+
+> 注意：`-XX:+PretenureSizeThreshold`参数只对 Serial和ParNew两款新生代收集器有效，HotSot虚拟机默认使用的 Parallel Scavenge收集器，因此需要手动更改虚拟机收集器的组合类型（例如：ParNew + CMS）
+
+**代码示例：**
+
+```java
+/**
+ * @Author: geek
+ * @Date: 2020/10/3 11:13
+ * @Description:
+ * VM参数：-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8 -XX:PretenureSizeThreshold=3145728 -XX:+UseConcMarkSweepGC
+ * 参数说明：
+ *  -XX:+PretenureSizeThreshold=3145728 将最大对象的内存设置为3MB，超过3MB的对象直接分配进入老年代
+ *  -XX:+UseConcMarkSweepGC 垃圾收集器类型设置为 ParNew + CMS类型组合
+ */
+public class Demo02 {
+
+    private static final int _1MB = 1024 * 1024;
+
+    public static void main(String[] args) {
+        byte[] allocation = new byte[4 * _1MB];
+    }
+}
+```
+
+**GC日志：**
+
+```verilog
+Heap
+ par new generation   total 9216K, used 2377K [0x00000000fec00000, 0x00000000ff600000, 0x00000000ff600000)
+  eden space 8192K,  29% used [0x00000000fec00000, 0x00000000fee524d0, 0x00000000ff400000)
+  from space 1024K,   0% used [0x00000000ff400000, 0x00000000ff400000, 0x00000000ff500000)
+  to   space 1024K,   0% used [0x00000000ff500000, 0x00000000ff500000, 0x00000000ff600000)
+ concurrent mark-sweep generation total 10240K, used 4096K [0x00000000ff600000, 0x0000000100000000, 0x0000000100000000)
+ Metaspace       used 3453K, capacity 4496K, committed 4864K, reserved 1056768K
+  class space    used 381K, capacity 388K, committed 512K, reserved 1048576K
+```
+
+##### 4.3长期存活的对象进入老年代
+
+##### 4.4动态判断对象年龄
+
+##### 4.5空间分配担保
 
 
 
