面试题 - spring cloud(Ribbon组件)

--- a/doc/面试/面试.md
+++ b/doc/面试/面试.md
@@ -122,6 +122,34 @@
 
 #### Ribbon 负载均衡
 
+1. 负载均衡的意义是什么
+
+   负载均衡可以改善跨计算机、计算机集群等资源的工作负载分布，旨在优化计算资源的使用，提高吞吐量 降低响应耗时以防止单一资源工作超载。
+
+   使用多个组件进行负载均衡而不是单个组件可能会通过冗余来提高可靠性和可用性
+
+   负载均衡通常涉及硬件或者软件，例如多层交换机或者域名系统服务器进程
+
+2. Ribbon作用
+
+   Ribbon是Netflix发布的开源的负载均衡组件，主要提供了软件层面的负载均衡算法
+
+   Ribbon提供的负载均衡算法有：简单轮询、随机连接等，当然也可以自定义负载均衡算法
+
+3. Nginx与Ribbon的区别
+
+   Nginx反向代理的同时可以实现负载均衡，Nginx拦截客户端的请求采用负载均衡策略通过upstream配置进行转发，相当于请求是通过Nginx服务器转发的
+
+   Ribbon是在客户端实现负载均衡，从注册中心读取目标服务器信息，然后在客户端采用轮询策略对服务进行访问
+
+4. Ribbon的底层实现原理
+
+   Ribbon使用discoveryClient从注册中心获取目标服务器信息，对统一接口请求进行计数，采用取余的方式获取目标服务器集群索引，然后返回目标服务器信息
+
+5. 负载均衡相关注解
+
+   `@LoadBalanced`注解开启客户端
+
 #### Feign 通信组件
 
 #### Hystrix 熔断器
