mybatis  多对一查询

--- a/doc/知识漏洞/问题汇总.md
+++ b/doc/知识漏洞/问题汇总.md
@@ -49,3 +49,10 @@
 2. 网关gateway在网络中的作用
 3. Spring cache/ehcache缓存学习
 
+#### 10/31
+
+1. JVM中`Exception`和`Error`区别？`RuntimeException`运行时异常和非运行时异常的区别
+2. Spring中事务是如何管理的？`@Transactional`注解的用法
+
+
+
