问题汇总 Spring中的utils与apache中的utils性能对比

--- a/doc/知识漏洞/问题汇总.md
+++ b/doc/知识漏洞/问题汇总.md
@@ -41,7 +41,6 @@
 
 8. SNATSHOT版本与RELEASE版本区别
 
-9. Spring的CollectionUtils和apache的CollectionUtils性能区别
 
 #### 10/30
 
@@ -53,6 +52,11 @@
 
 1. JVM中`Exception`和`Error`区别？`RuntimeException`运行时异常和非运行时异常的区别
 2. Spring中事务是如何管理的？`@Transactional`注解的用法
+
+#### 11/4
+
+1. Spring的CollectionUtils和apache的CollectionUtils性能区别
+2. Spring的BeanUtils和apache的BeanUtils性能区别
 
 
 
