文档名称：Vue 修改说明：Vue基础

--- a/doc/Vue/03.Vue-vueX.md
+++ b/doc/Vue/03.Vue-vueX.md
@@ -33,7 +33,7 @@ const store = new Vuex.Store({
     increment(state){
       state.counter ++
     },
-    decrement(state){
+    decrement(state){7
       state.counter --
     }
   },
