--- a/doc/考研院校整理.md
+++ b/doc/考研院校整理.md
@@ -86,9 +86,15 @@
 
 #### 福州大学 
 
-研究生院官网 | [知乎链接](https://mp.weixin.qq.com/s/_o78UclC55-gHDwx1CxKTA)
+[研究生院官网](https://yjsy.fzu.edu.cn/html/zsgz/ssyjszs/zsjz/2020/09/15/f89e6357-3083-4332-ad06-a480fab8d5ae.html) | [知乎链接](https://mp.weixin.qq.com/s/_o78UclC55-gHDwx1CxKTA)
+
+| 数计（软件）学院—专业学位 | 陈老师 | 0591-22866353 | 604712083@qq.com |
+| ------------------------- | ------ | ------------- | ---------------- |
+|                           |        |               |                  |
 
 ![image-20201228160741934](https://i.loli.net/2020/12/28/MqUyOIBPeETtX2m.png)
+
+![image-20210505114639203](https://i.loli.net/2021/05/05/lPRLQZekJrTyuGa.png)
 
 #### 武汉理工大学
 
@@ -114,3 +120,20 @@
 
 ![image-20210103173210051](https://i.loli.net/2021/01/03/iOFHMPKv9VngpUN.png)
 
+#### 南昌大学
+
+[研究生院](http://yjsy.ncu.edu.cn/tzgg/1187f25f3a984f068361ab6c005b1207.htm)
+
+联系人：熊老师　电话：0791-83969613　Email：[294611385@qq.com](mailto:294611385@qq.com)
+
+招生计划：学术学位硕士研究生66人，全日制专业学位硕士研究生410人
+
+![image-20210505115822275](https://i.loli.net/2021/05/05/SfxYkV8n3EIjQZF.png)
+
+
+
+联系人：史老师  电话：0791-88305081  Email：[ncusc@ncu.edu.cn](mailto:ncusc@ncu.edu.cn)
+
+招生计划：学术学位硕士研究生10人，全日制专业学位硕士研究生40人。
+
+![image-20210505120021855](https://i.loli.net/2021/05/05/zbWrOS27akqgp8d.png)
