--- a/doc/面试/面试.md
+++ b/doc/面试/面试.md
@@ -1,33 +1,18 @@
 - [x] 设计模式
-
 - [x] JVM
-
 - [x] 并发编程
-
 - [x] Redis
-
 - [x] Kafka
-
 - [x] Spring
-
 - [ ] MySQL
-
 - [ ] Java 集合框架
-
 - [ ] Docker
-
 - [ ] ES
-
 - [ ] Spring Cloud
-
 - [x] 数据结构与算法
-
 - [ ] 阿里巴巴Java开发手册
-
 - [ ] API接口幂等性
-
 - [ ] TCP三次握手过程
-
 - [ ] Token、Session、Cookie区别
 
 
@@ -155,4 +140,37 @@
 #### Hystrix 熔断器
 
 #### Config 配置中心
+
+### JVM面试题
+
+1. 怎么判断对象是否可以被回收
+   1. 引用计数器法
+   2. 可达性分析算法
+2. JVM 有哪些垃圾回收算法
+   1. 标记-清除算法
+   2. 复制算法
+   3. 标记-整理算法
+3. JVM 有哪些垃圾回收器
+4. 简述分代垃圾回收器是怎么工作的？
+5. java内存分配与回收策率以及Minor GC和Major GC
+6. 说一下类装载的执行过程？
+7. 常用的 JVM 调优的参数都有哪些？你在项目中都用过哪些调优参数
+
+### 设计模式面试题
+
+### Web前端面试题
+
+响应布局的原理
+页面渲染HTML整个过程
+ES6的常用功能
+webpack 做过哪些优化，开发效率方面、打包策略方面
+Vue.js虚拟DOM的优缺点
+单点登录实现原理
+Https，和 http 的区别是什么？https 为什么比 http 安全？如何进行配置？
+
+
+
+
+
+
 
