涉及模块：并发编程-应用篇 提交说明：防止cpu占用100%案例

--- a/doc/Java并发编程/并发编程-应用篇.md
+++ b/doc/Java并发编程/并发编程-应用篇.md
@@ -1,5 +1,25 @@
 #### 效率
 
+##### 防止cpu占用100%
+
+1. sleep实现
+
+   在没有利用CPU计算时，不要让while (true) 空转浪费CPU资源。这事可以使用yield或者sleep方法让出CPU资源来给其他线程使用
+
+   ```java
+   while (true) {
+       try {
+           TimeUnit.MILLISECONDS.sleep(10);
+       } catch (InterruptedException e) {
+           e.printStackTrace();
+       }
+   }
+   ```
+
+   1. 这里也可以使用wait或者条件变量达到类似的效果，但是这些方法都需要**加锁**，并且需要响应的**唤醒操作**，一般适用于需要**同步**的场景。sleep适用于**无需锁同步**的场景
+
+2. wait实现
+
 #### 限流
 
 #### 互斥
