涉及模块：并发编程-基础篇 提交说明：join() 方法详解

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -8,7 +8,7 @@
 - 当一个程序运行时，从磁盘加载这个程序的代码至内存，这时也就开启了一个进程
 - 进程也可以理解为一个程序的实例。大部分程序可以运行多个进程实例（记事本、浏览器），当然有个程序只能运行一个进程实例（微信、网易云音乐）
 
-##### 线程  
+##### 线程
 
 - 一个进程之内可以运行多个线程
 - 一个线程就是一个指令流，将指令流中的一条条指令以一定的顺序交给CPU执行
@@ -19,8 +19,8 @@
 - 进程之间相互独立。线程存在于进程的内部，是进程的一个子集
 - 进程拥有共享资源，如内存空间，供其内部的线程共享使用
 - 进程之间的通信比较复杂
-  - 同一台计算机内的进程通信称为IPC（Inter Process Communication）通信
-  - 不同计算机之间的进程通信，需要经过网络通信，并且遵守一定的协议（HTTP协议）
+    - 同一台计算机内的进程通信称为IPC（Inter Process Communication）通信
+    - 不同计算机之间的进程通信，需要经过网络通信，并且遵守一定的协议（HTTP协议）
 - 线程之间通信比较简单，因为它们共享进程的内存空间（eg：多个线程可以访问同一个共享变量）
 - 线程更加轻量级，线程的上下切换的开销一般要比进程之间的上下文切换开销低
 
@@ -231,7 +231,7 @@ public class ThreadStatusTest {
 
 *一个线程如果处于`RUNNABLE`状态，则不能再次调用start方法，否则会抛异常*
 
-#### 3.6 sleep() & yield() 
+#### 3.6 sleep() & yield()
 
 ##### sleep方法
 
@@ -274,7 +274,7 @@ public class ThreadStatusTest {
    	at com.kuhan.ops.monitor.system.Test7Interrupt$1.run(Test7Interrupt.java:20)
    ```
 
-   
+
 
 3. 睡眠结束后的线程未必可以立即执行（只有抢占到时间片资源的线程才可以执行）
 
@@ -298,7 +298,7 @@ Runnable task2 = () -> {
 
 ##### 区别
 
-调用sleep方法之后线程处于`TIMED_WATIING`阻塞状态、调用yield方法之后线程处于`RUNNABLE`就绪状态，调度器会把时间片分给就绪状态的线程而不会分给阻塞状态的线程 
+调用sleep方法之后线程处于`TIMED_WATIING`阻塞状态、调用yield方法之后线程处于`RUNNABLE`就绪状态，调度器会把时间片分给就绪状态的线程而不会分给阻塞状态的线程
 
 ##### 线程优先级
 
@@ -336,8 +336,89 @@ public class Test8Yield {
 }
 ```
 
-
-
 #### 3.7 join() 方法详解
+
+> 等待线程运行结束
+
+##### 为什么需要join
+
+```java
+@Slf4j(topic = "test10")
+public class Test10 {
+
+    private static int NUMBER = 0;
+
+    public static void main(String[] args) {
+        log.info("main start...");
+        increase();
+        log.info("main end...");
+    }
+
+
+    private static void increase() {
+        new Thread(() -> {
+            log.info("thread1 start...");
+            try {
+                TimeUnit.SECONDS.sleep(1);
+                NUMBER ++;
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            log.info("thread1 end...");
+        }, "thread1").start();
+        log.info("number: {}", NUMBER);
+    }
+}
+```
+
+以上代码中main线程先于thread1线程执行完成之后就获取NUMBER的结果，所以NUMBER还是0
+
+**使用join方法可以解决该问题：**
+
+```java
+@Slf4j(topic = "test10")
+public class Test10 {
+
+    private static int NUMBER = 0;
+
+    public static void main(String[] args) throws InterruptedException {
+        log.info("main start...");
+        increase();
+        log.info("main end...");
+    }
+
+
+    private static void increase() throws InterruptedException {
+        Thread thread = new Thread(() -> {
+            log.info("thread1 start...");
+            try {
+                TimeUnit.SECONDS.sleep(1);
+                NUMBER++;
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            log.info("thread1 end...");
+        }, "thread1");
+        thread.start();
+        thread.join();
+        log.info("number: {}", NUMBER);
+    }
+}
+
+
+16:38:55.374 [main] INFO test10 - main start...
+16:38:55.419 [thread1] INFO test10 - thread1 start...
+16:38:56.419 [thread1] INFO test10 - thread1 end...
+16:38:56.419 [main] INFO test10 - number: 1
+16:38:56.421 [main] INFO test10 - main end...
+```
+
+
+
+##### 应用之同步
+
+##### 等待多个结果
+
+##### 有时效的join
 
 ##### 3.8 interrupt方法详解
