涉及模块：并发编程-基础篇 提交说明：interrupt方法的使用

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -413,12 +413,86 @@ public class Test10 {
 16:38:56.421 [main] INFO test10 - main end...
 ```
 
-
-
 ##### 应用之同步
 
 ##### 等待多个结果
 
 ##### 有时效的join
 
-##### 3.8 interrupt方法详解
+#### 3.8 interrupt方法详解
+
+##### 打断处于阻塞状态的线程
+
+打断处于sleep、wait、join状态（阻塞状态）的线程，会清除打断标记，并且会抛出`InterruptedException`异常
+
+```java
+@Slf4j(topic = "Test11Interrupt")
+public class Test11Interrupt {
+    public static void main(String[] args) throws InterruptedException {
+        Thread thread = new Thread(() -> {
+            log.info("sleep...");
+            try {
+                TimeUnit.SECONDS.sleep(3);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }, "thread1");
+
+        thread.start();
+
+        TimeUnit.SECONDS.sleep(1);
+        log.info("interrupt...");
+        thread.interrupt();
+        log.info("thread interrupt state: {}", thread.isInterrupted());
+    }
+}
+
+11:04:46.320 [thread1] INFO Test11Interrupt - sleep...
+11:04:47.318 [main] INFO Test11Interrupt - interrupt...
+11:04:47.318 [main] INFO Test11Interrupt - thread interrupt state: false
+java.lang.InterruptedException: sleep interrupted
+	at java.lang.Thread.sleep(Native Method)
+	at java.lang.Thread.sleep(Thread.java:340)
+	at java.util.concurrent.TimeUnit.sleep(TimeUnit.java:386)
+	at com.kuhan.ops.monitor.system.Test11Interrupt.lambda$main$0(Test11Interrupt.java:18)
+	at java.lang.Thread.run(Thread.java:748)
+Disconnected from the target VM, address: '127.0.0.1:10471', transport: 'socket'
+```
+
+##### 打断处于正常运行状态的线程。
+
+主线程只是将子线程的打断标记置为真，但是并没有真正的终止子线程的任务，子线程可以根据自己的打断状态来自行终止线程任务
+
+```java
+@Slf4j(topic = "Test12Interrupt")
+public class Test12Interrupt {
+    public static void main(String[] args) throws InterruptedException {
+        Thread thread = new Thread(() -> {
+            while (true) {
+                boolean isInterrupted = Thread.currentThread().isInterrupted();
+                if(isInterrupted) {
+                    log.info("thread1线程被主线程打断，终止执行任务...");
+                    break;
+                }
+            }
+        }, "thread1");
+        thread.start();
+
+        TimeUnit.SECONDS.sleep(1);
+        log.info("interrupt...");
+        thread.interrupt();
+    }
+}
+
+11:23:45.895 [main] INFO Test12Interrupt - interrupt...
+11:23:45.898 [thread1] INFO Test12Interrupt - thread1线程被主线程打断，终止执行任务...
+```
+
+##### interrupt使用场景
+
+可以**优雅地停止**线程任务（让子线程自己判断是否需要停止线程任务）
+
+
+
+
+
