--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -492,6 +492,16 @@ public class Test12Interrupt {
 
 可以**优雅地停止**线程任务（让子线程自己判断是否需要停止线程任务）
 
+##### 3.9 不推荐使用的方法
+
+还有一些不推荐使用的方法，这些方法已经过时并且容易破坏同步代码块，造成线程死锁
+
+| 方法名  | static | 功能说明             |
+| ------- | ------ | -------------------- |
+| stop    |        | 停止线程运行         |
+| suspend |        | 挂起（暂停线程运行） |
+| resume  |        | 恢复线程运行         |
+
 
 
 
