涉及模块：并发编程-基础篇 提交说明：主线程&守护线程

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -492,7 +492,7 @@ public class Test12Interrupt {
 
 可以**优雅地停止**线程任务（让子线程自己判断是否需要停止线程任务）
 
-##### 3.9 不推荐使用的方法
+#### 3.9 不推荐使用的方法
 
 还有一些不推荐使用的方法，这些方法已经过时并且容易破坏同步代码块，造成线程死锁
 
@@ -502,7 +502,42 @@ public class Test12Interrupt {
 | suspend |        | 挂起（暂停线程运行） |
 | resume  |        | 恢复线程运行         |
 
+#### 3.10 主线程与守护线程
 
+##### 主线程
+
+默认情况下Java线程即主线程需要等待所有其他子线程运行结束以后，才会结束运行
+
+##### 守护线程
+
+有一种特殊的线程叫做守护线程，只要其他非守护线程运行结束了，不管守护线程的代码有没有执行完，守护线程也会停止运行
+
+```java
+@Slf4j(topic = "Test12Interrupt")
+public class Test14Daemon {
+    public static void main(String[] args) throws InterruptedException {
+        Thread thread = new Thread(() -> {
+            while (true) {
+                boolean isInterrupted = Thread.currentThread().isInterrupted();
+                if(isInterrupted) {
+                    break;
+                }
+            }
+            log.info("终止执行任务...");
+        }, "thread1");
+        thread.setDaemon(true);
+        thread.start();
+
+        TimeUnit.SECONDS.sleep(1);
+        log.info("主线程结束运行...");
+    }
+}
+```
+
+##### 守护线程应用场景
+
+1. 垃圾回收线程就是守护线程，主要程序终止，垃圾回收线程无论工作有没有做完也会停止运行
+2. Tomcat中的Acceptor和Poller线程也是守护线程。所有当Tomcat接收到shutdown命令之后，不会等待它处理完当前的请求就直接停止运行
 
 
 
