涉及模块：并发编程-基础篇 提交说明：五种线程状态

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -1,3 +1,7 @@
+---
+typora-root-url: imgs
+---
+
 ### 进程与线程
 
 #### 进程和线程
@@ -538,6 +542,40 @@ public class Test14Daemon {
 
 1. 垃圾回收线程就是守护线程，主要程序终止，垃圾回收线程无论工作有没有做完也会停止运行
 2. Tomcat中的Acceptor和Poller线程也是守护线程。所有当Tomcat接收到shutdown命令之后，不会等待它处理完当前的请求就直接停止运行
+
+#### 3.11 五种线程状态
+
+这是从**操作系统**层面来描述的
+
+<img src="/线程五种运行状态.png" alt="线程五种运行状态" style="zoom:80%;" />
+
+1. 初始状态（创建状态）
+
+   仅仅在语言层面创建了线程对象，还未与操作系统相关联
+
+2. 可运行状态（就绪状态）
+
+   指该线程已经被创建（已经与操作系统关联），可以由CPU调度执行
+
+3. 运行状态
+
+   指线程获取了CPU时间片，处于正在运行中的状态
+
+   当CPU时间片运行完，线程状态会从`运行状态`切换至`可运行状态`，会导致线程上下文的切换
+
+4. 阻塞状态
+
+   如果调用了阻塞API，这是线程不再会占用CPU资源，会导致线程的上下文切换，进入到阻塞状态
+
+   阻塞结束之后，操作系统会唤醒处于阻塞状态的线程，线程切换至可运行状态
+
+   与`可运行状态`的区别是，对于阻塞状态的线程来说只要他们一直不被唤醒，调度器就不会考虑给他们分配CPU资源
+
+5. 终止状态
+
+#### 3.12 六种线程状态
+
+
 
 
 
