涉及模块：并发编程-应用篇 提交说明：线程之间调度：烧水泡茶案例

--- a/doc/Java并发编程/并发编程-应用篇.md
+++ b/doc/Java并发编程/并发编程-应用篇.md
@@ -36,4 +36,60 @@
 
 #### 统筹
 
+##### 案例：烧水泡茶
+
+<img src="D:\KUHAN Project\notes\doc\Java并发编程\imgs\案例：烧水泡茶.png" alt="案例：烧水泡茶" style="zoom:60%;" />
+
+```java
+@Slf4j(topic = "烧水泡茶")
+public class Test15 {
+
+    public static void main(String[] args) {
+        Thread thread1 = new Thread("老王"){
+            @Override
+            @SneakyThrows
+            public void run() {
+                log.info("洗水壶...");
+                TimeUnit.SECONDS.sleep(1);
+                log.info("烧开水...");
+                TimeUnit.SECONDS.sleep(5);
+                log.info("开水烧好了...");
+            }
+        };
+
+        Thread thread2 = new Thread("老赵"){
+            @Override
+            @SneakyThrows
+            public void run() {
+                log.info("洗茶壶...");
+                TimeUnit.SECONDS.sleep(1);
+                log.info("洗茶杯...");
+                TimeUnit.SECONDS.sleep(2);
+                log.info("拿茶叶...");
+                TimeUnit.SECONDS.sleep(1);
+
+                // 等待thread1线程任务执行结束，再执行当前线程后续方法
+                thread1.join();
+                log.info("开始泡茶...");
+            }
+        };
+
+        thread1.start();
+        thread2.start();
+    }
+}
+
+
+
+15:04:11.760 [老王] INFO 烧水泡茶 - 洗水壶...
+15:04:11.760 [老赵] INFO 烧水泡茶 - 洗茶壶...
+15:04:12.763 [老王] INFO 烧水泡茶 - 烧开水...
+15:04:12.763 [老赵] INFO 烧水泡茶 - 洗茶杯...
+15:04:14.764 [老赵] INFO 烧水泡茶 - 拿茶叶...
+15:04:17.764 [老王] INFO 烧水泡茶 - 开水烧好了...
+15:04:17.764 [老赵] INFO 烧水泡茶 - 开始泡茶...
+```
+
+
+
 #### 定时
