涉及模块：并发编程-基础篇 提交说明：Java线程小结

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -569,13 +569,57 @@ public class Test14Daemon {
 
    阻塞结束之后，操作系统会唤醒处于阻塞状态的线程，线程切换至可运行状态
 
-   与`可运行状态`的区别是，对于阻塞状态的线程来说只要他们一直不被唤醒，调度器就不会考虑给他们分配CPU资源
+   与`可运行状态`的区别是，对于`阻塞状态`的线程来说只要他们一直`不被唤醒`，调度器就不会考虑给他们分配CPU资源
 
 5. 终止状态
 
+   表示线程执行结束，生命周期完结，不再会切换至其他状态
+
 #### 3.12 六种线程状态
 
+线程的六种状态是从**Java API**层面分析的
 
+#### 3.13 烧水泡茶案例
+
+<img src="/案例：烧水泡茶.png" alt="案例：烧水泡茶" style="zoom:60%;" />
+
+#### 3.14 本章小节
+
+1. 线程的创建方式
+
+2. 线程的重要API
+
+   start run sleep join interrupt 
+
+3. 线程状态
+
+4. <font color='red'>应用方面</font>
+
+   1. 异步调用
+
+      主线程执行期间，其他线程执行一下耗时的操作
+
+   2. 提高效率
+
+      并行计算，缩短运算时间
+
+   3. 同步等待
+
+      使用join方法可以实现同步等待
+
+   4. 统筹规划
+
+      合理进行线程之间的调度，以达到最优的效果
+
+5. <font color='red'>原理方面</font>
+
+   线程运行流程：栈、栈帧、上下文切换、程序计数器
+
+   Thread类的两种创建线程方式的源码
+
+6. <font color='red'>模式方面</font>
+
+   两阶段终止模式
 
 
 
