涉及模块：并发编程-基础篇 提交说明：共享模型之管程

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -621,5 +621,18 @@ public class Test14Daemon {
 
    两阶段终止模式
 
+### 4. 共享模型之管程
+
+#### 4.1 本章内容
+
+1. 共享问题
+2. synchronized
+3. 线程安全分析
+4. Monitor（管程的底层实现）
+5. wait/notify
+6. 线程状态转换
+7. 活跃性（死锁、活锁、饥饿）
+8. Lock（对活跃性问题进行改进）
+
 
 
