涉及模块：并发编程-基础篇 提交说明：多个线程操作共享变量所带来的问题

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -623,7 +623,7 @@ public class Test14Daemon {
 
 ### 4. 共享模型之管程
 
-#### 4.1 本章内容
+#### 本章内容
 
 1. 共享问题
 2. synchronized
@@ -633,6 +633,103 @@ public class Test14Daemon {
 6. 线程状态转换
 7. 活跃性（死锁、活锁、饥饿）
 8. Lock（对活跃性问题进行改进）
+
+#### 4.1 共享带来的问题
+
+多个线程同时**读写**共享变量，可能出现线程安全问题。
+
+> 例如：线程1写完数据之后，由于时间片用完进入**阻塞状态**，导致其操作后的数据没有及时刷新进入**主存**，线程2这个时候拿到的之前旧的数据进行读写，这个时候就出现了线程安全问题。并且线程1、线程2都没有觉得自己做错
+
+<img src="/线程安全问题.png" alt="线程安全问题" style="zoom:60%;" />
+
+##### Java代码实现
+
+> 两个线程对初始值为0的静态变量一个做自增操作，一个做自减操作，分别执行5000次，最终的结果是0吗？
+
+```java
+@Slf4j(topic = "共享模型之管程")
+public class Test16 {
+    
+    private static int NUMBER = 0;
+    
+    public static void main(String[] args) throws InterruptedException {
+        Thread thread1 = new Thread("increase thread"){
+            @Override
+            public void run() {
+                for (int i = 0; i < 5000; i++) {
+                    NUMBER ++;
+                }
+            }
+        };
+
+        Thread thread2 = new Thread("decrease thread"){
+            @Override
+            public void run() {
+                for (int i = 0; i < 5000; i++) {
+                    NUMBER --;
+                }
+            }
+        };
+
+        thread1.start();
+        thread2.start();
+        
+        thread1.join();
+        thread2.join();
+        log.info("最终执行结果：{}", NUMBER);
+    }
+}
+
+17:02:17.416 [main] INFO 共享模型之管程 - 最终执行结果：-445
+```
+
+##### 问题分析
+
+以上代码的执行结果可能为正数、负数、零。为什么会出现这种情况呢？因为在Java中对静态变量的自增、或者自减操作并不是原子操作，从字节码的角度分析如下：
+
+对于 `i ++` （**i  为静态变量**）而言，实际会产生如下的**四个字节码指令**
+
+```java
+getstatic i   // 获取静态变量i的值
+iconst_1      // 准备常量1
+iadd          // 自增
+putstatic i   // 将修改后的值存入静态变量i
+```
+
+**Java的内存模型如下：**
+
+<img src="/Java内存模型.png" alt="Java内存模型" style="zoom:60%;" />
+
+##### 临界区 Critical Section
+
+一个程序运行多个线程本身是没有问题的，问题出现在多个线程访问**共享资源**。多个线程对共享资源进行**读操作**也是没有问题的，如果多个线程对共享资源进行**写操作**可能出现**指令交错**的问题，也就是线程安全问题
+
+ 一个代码块内如果出现多个线程对共享资源进行**读写操作**，那么这个代码块称之为**临界区**
+
+```java
+static int counter = 0;
+
+static void increment(){
+ // 临界区
+ counter++;
+}
+static void decrement(){
+ // 临界区
+ counter--;
+}
+```
+
+##### 竞态条件 Race Condition
+
+多个线程在临界区内执行，由于**代码的执行序列不同**（字节码的执行序列）而导致结果无法预测，称之发生了竞态条件
+
+#### 4.2 synchronized解决方案
+
+#### 4.3 方法上的synchronized
+
+#### 4.4 变量的线程安全分析
+
+
 
 
 
