--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -721,9 +721,25 @@ static void decrement(){
 
 ##### 竞态条件 Race Condition
 
-多个线程在临界区内执行，由于**代码的执行序列不同**（字节码的执行序列）而导致结果无法预测，称之发生了竞态条件
+多个线程在临界区内执行，由于**代码的执行序列不同**（字节码的执行序列）而导致程序的结果无法预测，称之发生了竞态条件
 
 #### 4.2 synchronized解决方案
+
+##### ❗ 应用之互斥
+
+为了避免在临界区内发生竞态条件，有以下两种方案可以解决该问题
+
+1. 阻塞式解决方案：Synchronized、Lock
+2. 非阻塞式解决方案：原子变量
+
+本章节使用的是Synchronized解决方案解决竞态条件问题。Synchronized俗称**对象锁**，它采用的互斥机制让同一时刻最多有一个线程持有对象锁，其他线程再想获取对象锁就会被阻塞掉。这样就可以保证拥有锁的线程可以安全地执行临界区内的代码，而不用担心上下文切换的问题。
+
+**注意**
+
+虽然Java中**互斥**和**同步**都是基于Synchronized实现的，但是它们还是有区别的
+
+1. 互斥是保证临界区的竞态条件发生时，同一时刻只能有一个线程执行临界区内的代码
+2. 
 
 #### 4.3 方法上的synchronized
 
