涉及模块：并发编程-基础篇 提交说明：synchronized解决方案

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -739,7 +739,59 @@ static void decrement(){
 虽然Java中**互斥**和**同步**都是基于Synchronized实现的，但是它们还是有区别的
 
 1. 互斥是保证临界区的竞态条件发生时，同一时刻只能有一个线程执行临界区内的代码
-2. 
+2. 同步是由于线程的执行顺序不同，需要一个线程等待另一个线程运行到一个点
+
+##### synchronized语法
+
+```java
+// 线程1， 线程2(blocked)
+synchronized(对象) {
+ // 临界区
+}
+```
+
+```java
+@Slf4j(topic = "共享模型之管程")
+public class Test16fSynchronized {
+    
+    private static int NUMBER = 0;
+
+    private final static Object LOCK = new Object();
+    
+    public static void main(String[] args) throws InterruptedException {
+        Thread thread1 = new Thread("increase thread"){
+            @Override
+            public void run() {
+                for (int i = 0; i < 5000; i++) {
+                    synchronized (LOCK) {
+                        NUMBER ++;
+                    }
+                }
+            }
+        };
+
+        Thread thread2 = new Thread("decrease thread"){
+            @Override
+            public void run() {
+                for (int i = 0; i < 5000; i++) {
+                    synchronized (LOCK) {
+                        NUMBER --;
+                    }
+                }
+            }
+        };
+
+        thread1.start();
+        thread2.start();
+        
+        thread1.join();
+        thread2.join();
+        log.info("最终执行结果：{}", NUMBER);
+    }
+}
+```
+
+
 
 #### 4.3 方法上的synchronized
 
