--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -547,7 +547,7 @@ public class Test14Daemon {
 
 这是从**操作系统**层面来描述的
 
-<img src="/线程五种运行状态.png" alt="线程五种运行状态" style="zoom:80%;" />
+<img src="D:\KUHAN Project\notes\doc\Java并发编程\imgs\线程五种运行状态.png" alt="线程五种运行状态" style="zoom:80%;" />
 
 1. 初始状态（创建状态）
 
@@ -581,7 +581,7 @@ public class Test14Daemon {
 
 #### 3.13 烧水泡茶案例
 
-<img src="/案例：烧水泡茶.png" alt="案例：烧水泡茶" style="zoom:60%;" />
+<img src="D:\KUHAN Project\notes\doc\Java并发编程\imgs\案例：烧水泡茶.png" alt="案例：烧水泡茶" style="zoom:60%;" />
 
 #### 3.14 本章小节
 
@@ -640,7 +640,7 @@ public class Test14Daemon {
 
 > 例如：线程1写完数据之后，由于时间片用完进入**阻塞状态**，导致其操作后的数据没有及时刷新进入**主存**，线程2这个时候拿到的之前旧的数据进行读写，这个时候就出现了线程安全问题。并且线程1、线程2都没有觉得自己做错
 
-<img src="/线程安全问题.png" alt="线程安全问题" style="zoom:60%;" />
+<img src="D:\KUHAN Project\notes\doc\Java并发编程\imgs\线程安全问题.png" alt="线程安全问题" style="zoom:60%;" />
 
 ##### Java代码实现
 
@@ -698,7 +698,7 @@ putstatic i   // 将修改后的值存入静态变量i
 
 **Java的内存模型如下：**
 
-<img src="/Java内存模型.png" alt="Java内存模型" style="zoom:60%;" />
+<img src="D:\KUHAN Project\notes\doc\Java并发编程\imgs\Java内存模型.png" alt="Java内存模型" style="zoom:60%;" />
 
 ##### 临界区 Critical Section
 
@@ -791,9 +791,124 @@ public class Test16fSynchronized {
 }
 ```
 
+##### 思考
 
+synchronized本质使用**对象锁**保证了**临界区代码的原子性**，临界区内的代码对外是不可分割的，不会被线程的切换所打断
+
+为了加深理解，请思考一下问题：
+
+1. 如果把synchronized关键字放在for循环外面，会怎样？（原子性问题）
+
+   synchronized关键字放在for的话，**保证了20000行 JVM字节码指令的原子性**。和保证4行字节码指令原子性格哪个**性能**更高？
+
+2. 如果t1 是synchronized( obj1) 但是t2 synchronized( obj2)会怎样？（应该持有同一个锁对象）
+
+   在使用synchronized时，我们应该保证不同线程锁的是同一个对象，否则临界区代码仍然会因为线程切换出现不能保证原子性问题，仍然会出现线程安全问题
+
+3. 如果t1 是synchronized( obj1) 但是t2 没有使用synchronized会怎么样？（所有线程都应该持有同一个锁对象）
+
+   t2线程没有加锁，所以在t1线程持有锁的时候，t1不会出现阻塞状态，仍然会出现线程安全问题
+
+##### 面向对象改进
+
+```java
+@Slf4j(topic = "共享模型之管程")
+public class Test17Synchronized {
+    
+    public static void main(String[] args) throws InterruptedException {
+
+        Room room = new Room();
+
+        Thread thread1 = new Thread("increase thread"){
+            @Override
+            public void run() {
+                for (int i = 0; i < 5000; i++) {
+                    room.increment();
+                }
+            }
+        };
+
+        Thread thread2 = new Thread("decrease thread"){
+            @Override
+            public void run() {
+                for (int i = 0; i < 5000; i++) {
+                    room.decrement();
+                }
+            }
+        };
+
+        thread1.start();
+        thread2.start();
+        
+        thread1.join();
+        thread2.join();
+        log.info("最终执行结果：{}", room.getCounter());
+    }
+}
+
+class Room {
+    private int counter = 0;
+
+    public void increment () {
+        synchronized (this) {
+            counter ++;
+        }
+    }
+
+    public void decrement () {
+        synchronized (this) {
+            counter --;
+        }
+    }
+
+    /**
+     * 在进行读操作的时候也需要保证互斥，防止在其他线程写的过程中读取脏数据
+     * @return 获取counter的数值
+     */
+    public int getCounter () {
+        synchronized (this) {
+            return counter;
+        }
+    }
+}
+```
 
 #### 4.3 方法上的synchronized
+
+##### synchronized方法
+
+```java
+class Test {
+	// 普通成员方法
+    public synchronized void increment () {
+    }
+
+    // 等价于 所得是this对象
+    public void increment1 () {
+        synchronized(this) {
+
+        }
+    }
+}
+```
+
+```java
+class Test {
+	// 静态成员方法
+    public synchronized static void increment2 () {
+
+    }
+	// increment2等价于increment3，所得是Test类
+    public static void increment3 () {
+        synchronized(Test.class) {
+
+        }
+    }
+
+}
+```
+
+
 
 #### 4.4 变量的线程安全分析
 
