涉及模块：并发编程-基础篇 提交说明：线程8锁

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -904,11 +904,343 @@ class Test {
 
         }
     }
-
 }
 ```
 
+##### 所谓的“线程八锁”
 
+其实就是考察的synchronized锁的是哪个对象
+
+1. 情况1
+
+   锁的是**this对象**
+
+   输出 1 2 或者 2 1
+
+   ```java
+   // 
+   public class Test18 {
+       public static void main(String[] args) {
+           Number number = new Number();
+   
+           new Thread(() -> {
+               number.fun1();
+           }).start();
+           new Thread(() -> {
+               number.fun2();
+           }).start();
+       }
+   }
+   
+   @Slf4j(topic = "Number")
+   class Number {
+       /**
+        * 锁的是this对象
+        */
+       public synchronized void fun1() {
+           log.info("1");
+       }
+   
+       public synchronized void fun2() {
+           log.info("2");
+       }
+   }
+   ```
+
+2. 情况2 
+
+   一秒后输出1 2，或者先输出2  然后一秒后输出1
+
+   ```java
+   @Slf4j(topic = "Test18")
+   public class Test18 {
+       public static void main(String[] args) {
+           Number number = new Number();
+   
+           new Thread(() ->{
+               log.info("thread1 begin");
+               number.fun1();
+           }).start();
+           new Thread(() -> {
+               log.info("thread2 begin");
+               number.fun2();
+           }).start();
+       }
+   }
+   
+   @Slf4j(topic = "Number")
+   class Number {
+       /**
+        * 锁的是this对象
+        */
+       @SneakyThrows
+       public synchronized void fun1() {
+           TimeUnit.SECONDS.sleep(1);
+           log.info("1");
+       }
+   
+       public synchronized void fun2() {
+           log.info("2");
+       }
+   }
+   
+   17:04:02.035 [Thread-0] INFO Test18 - thread1 begin
+   17:04:02.035 [Thread-1] INFO Test18 - thread2 begin
+   17:04:03.039 [Thread-0] INFO Number - 1
+   17:04:03.039 [Thread-1] INFO Number - 2
+   ```
+
+3. fun3是同步方法，不存在互斥情况
+
+   ```java
+   // 3 1s后 12
+   // 23 1s后 1
+   // 32 1s后 1
+   ```
+
+   ```java
+   @Slf4j(topic = "Test18")
+   public class Test18 {
+       public static void main(String[] args) {
+           Number number = new Number();
+   
+           new Thread(() ->{
+               log.info("thread1 begin");
+               number.fun1();
+           }).start();
+           new Thread(() -> {
+               log.info("thread2 begin");
+               number.fun2();
+           }).start();
+           new Thread(() -> {
+               log.info("thread3 begin");
+               number.fun3();
+           }).start();
+       }
+   }
+   @Slf4j(topic = "Number")
+   class Number {
+       /**
+        * 锁的是this对象
+        */
+       @SneakyThrows
+       public synchronized void fun1() {
+           TimeUnit.SECONDS.sleep(1);
+           log.info("1");
+       }
+   
+       public synchronized void fun2() {
+           log.info("2");
+       }
+   
+       public void fun3() {
+           log.info("3");
+       }
+   }
+   ```
+
+4. 两个锁对象
+
+   2 1s后 1
+
+   ```java
+   @Slf4j(topic = "Test18")
+   public class Test18 {
+       public static void main(String[] args) {
+           Number number1 = new Number();
+           Number number2 = new Number();
+   
+           new Thread(() ->{
+               number1.fun1();
+           }).start();
+           new Thread(() -> {
+               number2.fun2();
+           }).start();
+       }
+   }
+   
+   @Slf4j(topic = "Number")
+   class Number {
+       /**
+        * 锁的是this对象
+        */
+       @SneakyThrows
+       public synchronized void fun1() {
+           TimeUnit.SECONDS.sleep(1);
+           log.info("1");
+       }
+   
+       public synchronized void fun2() {
+           log.info("2");
+       }
+   }
+   ```
+
+5. 两个锁对象（一个this锁对象、一个Number.class对象）**没有互斥**
+
+   2 1s后 1
+
+   ```java
+   @Slf4j(topic = "Test18")
+   public class Test18 {
+       public static void main(String[] args) {
+           Number number1 = new Number();
+   
+           new Thread(() ->{
+               log.info("thread1 begin");
+               number1.fun1();
+           }).start();
+           new Thread(() -> {
+               log.info("thread2 begin");
+               number1.fun2();
+           }).start();
+       }
+   }
+   
+   @Slf4j(topic = "Number")
+   class Number {
+   
+       /**
+        * 锁的是 Number.class
+        */
+       @SneakyThrows
+       public static synchronized void fun1() {
+           TimeUnit.SECONDS.sleep(1);
+           log.info("1");
+       }
+   
+       /**
+        * 锁的是this对象
+        */
+       public synchronized void fun2() {
+           log.info("2");
+       }
+   }
+   
+   
+   17:32:08.952 [Thread-1] INFO Test18 - thread2 begin
+   17:32:08.952 [Thread-0] INFO Test18 - thread1 begin
+   17:32:08.955 [Thread-1] INFO Number - 2
+   17:32:09.955 [Thread-0] INFO Number - 1
+   ```
+
+6. 锁的是同一个Number.class对象（**有互斥**）
+   2 1s后 1
+
+   1s后 12
+
+   ```java
+   @Slf4j(topic = "Test18")
+   public class Test18 {
+       public static void main(String[] args) {
+           Number number1 = new Number();
+           new Thread(() -> number1.fun1()).start();
+           new Thread(() -> number1.fun2()).start();
+       }
+   }
+   
+   @Slf4j(topic = "Number")
+   class Number {
+   
+       /**
+        * 锁的是 Number.class
+        */
+       @SneakyThrows
+       public static synchronized void fun1() {
+           TimeUnit.SECONDS.sleep(1);
+           log.info("1");
+       }
+   
+       /**
+        * 锁的是 Number.class
+        */
+       public static synchronized void fun2() {
+           log.info("2");
+       }
+   }
+   
+   17:34:10.758 [Thread-0] INFO Test18 - thread1 begin
+   17:34:10.758 [Thread-1] INFO Test18 - thread2 begin
+   17:34:11.761 [Thread-0] INFO Number - 1
+   17:34:11.761 [Thread-1] INFO Number - 2
+   ```
+
+7. 线程1锁的是Number.class对象，线程2锁的是this对象，**不存在互斥现象**
+
+   2 1s后 1
+
+   ```java
+   @Slf4j(topic = "Test18")
+   public class Test18 {
+       public static void main(String[] args) {
+           Number number1 = new Number();
+           Number number2 = new Number();
+           new Thread(() -> number1.fun1()).start();
+           new Thread(() -> number2.fun2()).start();
+       }
+   }
+   
+   @Slf4j(topic = "Number")
+   class Number {
+   
+       /**
+        * 锁的是 Number.class对象
+        */
+       @SneakyThrows
+       public static synchronized void fun1() {
+           TimeUnit.SECONDS.sleep(1);
+           log.info("1");
+       }
+   
+       /**
+        * 锁的是 this对象
+        */
+       public synchronized void fun2() {
+           log.info("2");
+       }
+   }
+   ```
+
+8. 线程1锁的是Number.class对象，线程2锁的是Number.class对象，（**有互斥**）
+
+   2 1s后 1
+
+   1s后 12
+
+   ```java
+   @Slf4j(topic = "Test18")
+   public class Test18 {
+       public static void main(String[] args) {
+           Number number1 = new Number();
+           Number number2 = new Number();
+           new Thread(() -> number1.fun1()).start();
+           new Thread(() -> number2.fun2()).start();
+       }
+   }
+   
+   @Slf4j(topic = "Number")
+   class Number {
+   
+       /**
+        * 锁的是 Number.class对象
+        */
+       @SneakyThrows
+       public static synchronized void fun1() {
+           TimeUnit.SECONDS.sleep(1);
+           log.info("1");
+       }
+   
+       /**
+        * 锁的是 Number.class对象
+        */
+       @SneakyThrows
+       public static synchronized void fun2() {
+           log.info("2");
+       }
+   }
+   ```
+
+   
 
 #### 4.4 变量的线程安全分析
 
