--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -1244,6 +1244,20 @@ class Test {
 
 #### 4.4 变量的线程安全分析
 
+##### 成员变量和静态变量是否线程安全？
+
+##### 局部变量是否线程安全？
+
+##### 局部变量线程安全分析
+
+##### 常见的线程安全类
+
+##### 不可变类线程安全性
+
+##### 线程安全性方法组合
+
+##### 实例分析
+
 
 
 
