涉及模块：并发编程-基础篇 提交说明：变量的线程安全分析

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -1246,7 +1246,17 @@ class Test {
 
 ##### 成员变量和静态变量是否线程安全？
 
+1. 如果他们没有被共享，则线程安全
+2. 如果他们被共享了，这是还要根据读写操作来确定线程安全的问题
+   1. 如果只有读取操作，则线程安全
+   2. 如果既有读操作、又有写操作，则这段代码是临界区，需要考虑线程安全问题
+
 ##### 局部变量是否线程安全？
+
+1. 局部变量是线程安全的
+2. 但是局部变量引用的对象未必是线程安全的
+   1. 如果该对象没有逃离方法的作用范围，则他是线程安全的
+   2. 反之则是非线程安全的
 
 ##### 局部变量线程安全分析
 
