--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -1262,6 +1262,33 @@ class Test {
 
 ##### 常见的线程安全类
 
+1. String
+2. Integer
+3. StringBuffer
+4. Random
+5. Vector
+6. Hashtable
+7. java.util.concurrent包下的类
+
+这里说的线程安全指的是多个线程调用同一个实例的某一个方法时，是线程安全的
+
+```java
+Hashtable hashTable = new Hashtable();
+new Thread(() -> hashTable.put("key", "value")).start();
+new Thread(() -> hashTable.put("key", "value")).start();
+```
+
+**它们每个方法是原子的，但是它们的方法的组合就不是原子的**
+
+如下方法不是线程安全的
+
+```java
+Hashtable hashTable = new Hashtable();
+if(hashTable.get("key") == null) {
+    hashTable.put("key", "value");
+}
+```
+
 ##### 不可变类线程安全性
 
 ##### 线程安全性方法组合
