涉及模块：并发编程-基础篇 提交说明：实例分析

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -1291,9 +1291,154 @@ if(hashTable.get("key") == null) {
 
 ##### 不可变类线程安全性
 
-##### 线程安全性方法组合
+String、Integer都是不可变类，其内部的状态都是不可变的，因此其方法都是线程安全的
 
-##### 实例分析
+#### 习题
+
+##### 买票练习
+
+测试下面代码是否存在线程安全问题，如果有的话并进行修复
+
+**模拟多人卖票**（sell方法加上 synchronized关键字以后是线程安全的）
+
+```java
+@Slf4j(topic = "ExerciseSell")
+public class Test19ExerciseSell {
+
+    // Random 是线程安全的
+    private static Random random = new Random();
+
+    public static void main(String[] args) throws InterruptedException {
+        TicketWindow window = new TicketWindow(1000);
+
+        List<Thread> threadList = new ArrayList<>();
+        List<Integer> sellNumberList = new Vector<>();
+        // 模拟多人买票
+        for (int i = 0; i < 2000; i++) {
+            Thread thread = new Thread(() -> {
+                // 卖出去的票数
+                int sellNumber = window.sell(randomAmount());
+                sellNumberList.add(sellNumber);
+            });
+            thread.start();
+            threadList.add(thread);
+        }
+
+        for (Thread thread : threadList) {
+            thread.join();
+        }
+
+        // 卖出去的票总数
+        int sellCount = sellNumberList.stream().mapToInt(item -> item).sum();
+        log.info("卖出去的票总数:{}", sellCount);
+        // 剩余票数量
+        int surplusCount = window.getCount();
+        log.info("剩余票数量:{}", surplusCount);
+
+        log.info("卖出去的票总数 + 剩余票数量 :{}", sellCount + surplusCount);
+    }
+
+    /**
+     * @return 生成随机数1-5
+     */
+    public static int randomAmount() {
+        return random.nextInt(5) + 1;
+    }
+}
+
+/**
+ * 售票窗口
+ */
+class TicketWindow {
+
+    private int count;
+
+    public TicketWindow(int count) {
+        this.count = count;
+    }
+
+    /**
+     * @return 获取余票数量
+     */
+    public int getCount() {
+        return this.count;
+    }
+
+    /**
+     * 售票
+     * @param amount 卖出去的票数
+     * @return 卖出去的票数
+     */
+    public synchronized int sell(int amount) {
+        if(this.count >= amount) {
+            this.count -= amount;
+            return amount;
+        }else {
+            return 0;
+        }
+    }
+}
+```
+
+**转账场景模拟** （transfer方法加上synchronized关键字，锁住的是Account.class对象）
+
+```java
+@Slf4j(topic = "ExerciseTransfer")
+public class Test20ExerciseTransfer {
+
+    // Random 为线程安全
+    private static Random random = new Random();
+
+    public static void main(String[] args) throws InterruptedException {
+        Account a = new Account(1000);
+        Account b = new Account(1000);
+        Thread t1 = new Thread(() -> {
+            for (int i = 0; i < 1000; i++) {
+                a.transfer(b, randomAmount());
+            }
+        }, "t1");
+        Thread t2 = new Thread(() -> {
+            for (int i = 0; i < 1000; i++) {
+                b.transfer(a, randomAmount());
+            }
+        }, "t2");
+        t1.start();
+        t2.start();
+        t1.join();
+        t2.join();
+        // 查看转账2000次后的总金额
+        log.debug("total:{}",(a.getMoney() + b.getMoney()));
+    }
+
+    // 随机 1~100
+    public static int randomAmount() {
+        return random.nextInt(100) +1;
+    }
+}
+
+class Account {
+    private int money;
+    public Account(int money) {
+        this.money = money;
+    }
+    public int getMoney() {
+        return money;
+    }
+    public void setMoney(int money) {
+        this.money = money;
+    }
+    public void transfer(Account target, int amount) {
+        synchronized (Account.class) {
+            if (this.money > amount) {
+                this.setMoney(this.getMoney() - amount);
+                target.setMoney(target.getMoney() + amount);
+            }
+        }
+    }
+}
+```
+
+
 
 
 
